[package]
name = "mcp3425"
version = "0.3.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/mcp3425"
repository = "https://github.com/dbrgn/mcp3425-rs"
license = "MIT OR Apache-2.0"
description = "Platform agnostic Rust driver for the Microchip MCP3425 ADC."
readme = "README.md"
keywords = ["mcp3425", "microchip", "driver", "adc", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2021"

[features]
default = []
# Support for MCP3426 and MCP3427
dual_channel = []
# Support for MCP3428
quad_channel = []

[dependencies]
byteorder = "1.2"
embedded-hal = "0.2"
bitflags = "1.0"

[dependencies.measurements]
version = "0.10"
optional = true

[dev-dependencies]
linux-embedded-hal = "0.3"

[profile.release]
lto = true
